Fixes navbar collapse alignment issue in some situations

--- a/docs/styles/pattern-library.less
+++ b/docs/styles/pattern-library.less
@@ -65,6 +65,7 @@ body {
         padding: 12px 14px;
         border: none;
         float: left;
+        height: @navbar-height;
     }
 }
 
@@ -386,7 +387,7 @@ body {
         background: @pl-sidebar-link-active-bg;
         color: @pl-sidebar-sublink-fg;
         border-left-color: transparent;
-        font-size: 12px;
+        font-size: @font-size-base - 1;
         overflow: hidden;
         white-space: nowrap;
         text-overflow: ellipsis;
